Feat: added detail of a2ui